# Mythosis-Autonomus-Agent

./: .env.example  .gitignore  .tsbuildinfo  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
docs/: agent_instructions.md  live_trading_policy.md  nansen_policy.md  overfitting_policy.md  risk_policy.md  strategy_template.md  validation_rules.md
engine/: __init__.py
engine/backtest/: engine.py
engine/monte_carlo/: __init__.py  simulator.py
engine/optimization/: __init__.py  optimizer.py
engine/strategies/: __init__.py  indicators.py  strategy_001.py
engine/utils/: config.py
engine/validation/: final_verdict.py
engine/wfo/: __init__.py  walk_forward.py
src/config/: index.ts
src/data/: bybitClient.ts
src/indicators/: index.ts
src/reporting/: reportGenerator.ts
src/storage/: supabaseClient.ts
src/strategies/: interface.ts  strategy_001.ts
src/utils/: logger.ts  redisClient.ts  types.ts
strategies/sandbox/: strategy_001_edge_thesis.md
supabase/migrations/: 001_initial_schema.sql
tests/: dummy_backtest.py  dummy_fetch.ts  full_fetch.ts  run_optimizer.py
