[project]
name = "mythos-engine"
version = "0.1.0"
description = "Mythos Trading Agent — Python Research Engine (Backtest, WFO, Monte Carlo)"
requires-python = ">=3.12"

dependencies = [
    # Data manipulation
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=17.0.0",    # Parquet support

    # Scientific computing
    "scipy>=1.14.0",

    # Optimization
    "optuna>=4.0.0",       # Bayesian optimization (Phase 0+)

    # Supabase client
    "supabase>=2.7.0",

    # Upstash Redis
    "upstash-redis>=1.1.0",

    # Environment
    "python-dotenv>=1.0.0",

    # Visualization (reports)
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Logging
    "structlog>=24.4.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Type hints
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["engine"]
